delete Info component; move styles for Info to container.css file

--- a/src/Container/style.css
+++ b/src/Container/style.css
@@ -13,3 +13,10 @@
         grid-template-columns: 1fr;
     }
 }
+
+.container__info {
+    text-align: center;
+    color: #a6a6a6;
+    font-size: small;
+    font-style: italic;
+}
